tests/unit/default/syntax-error/074-create-table-column.x.t
---- IN ----
+%table.name:int|
---- OUT ----
---- ERR ----
syntax: expected EOL after `+%table.name:int` near `|` at position 16 - at line 1
---- EXIT ----
1
